# ws

mina_ws/src/mina_ugv/: CMakeLists.txt  mqtt.py  notes.txt  socket.py
mina_ws/src/mina_ugv/config/: navrover_config.yaml  realsense_config.yaml  rplidar_config.yaml
mina_ws/src/mina_ugv/launch/: display.launch.py
mina_ws/src/mina_ugv/launch/camera/: camera_back_launch.py  camera_both_launch.py  camera_front_launch.py
mina_ws/src/mina_ugv/launch/lidar/: lidar_back_launch.py  lidar_both_launch.py  lidar_front_launch.py
mina_ws/src/mina_ugv/launch/local_setup/: display_local.launch.py  local_ugv_launch.py
mina_ws/src/mina_ugv/launch/navigation/: display.navigation.launch.py  gazebo.launch.py  mapping.launch.py  navigation2.launch.py  online_async.launch.py  robot_state_publisher.launch.py  (+1 more)
mina_ws/src/mina_ugv/params/: nav2_params.yaml  nav2_params3.yaml
mina_ws/src/mina_ugv/rules/: 99-ublox-gnss.rules  create_accessories_rules.sh  create_gnss_rules.sh  create_lidar_back_rules.sh  create_lidar_front_rules.sh  create_rules_r2_driver.sh  r2_driver.rules  rplidar.rules  rplidar2 copy.rules  rplidar2.rules
mina_ws/src/mina_ugv/rviz/: accessories.rviz  camera.rviz  camera_360_with_depth.rviz  display_view.rviz  dual_camera.rviz  imu.rviz  multi_lidar.rviz  nav2_mapping.rviz  nav2_navigation.rviz  navrover.rviz
mina_ws/src/mina_ugv/scripts/: imu_standalone.py  lidar_avoidance.py  lidar_scan_multiple.py  lidar_to_point_publish.py  navrover_ps4_ctrl.py  publish_gps_data.py  ugv_driver.py
mina_ws/src/mina_ugv/src/: Odom_Publisher.cpp
mina_ws/src/mina_ugv/urdf/: navrover.urdf  navrover.xacro  rover_camera.xacro  rover_lidar.xacro  rover_ultrasound.xacro
mina_ws/src/mina_ugv/worlds/: sample.world
(+201 files in other folders)
